[iOS] Compatibility mouse events aren't prevented by calling preventDefault() on pointerdown https://bugs.webkit.org/show_bug.cgi?id=198124 Source/WebKit:

<rdar://problem/50410863>

Reviewed by Dean Jackson.

Ensure we wait until completion of a tap before removing the pointer ID and the preventDefault() state along with it.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _singleTapDidReset:]):
(-[WKContentView _commitPotentialTapFailed]):
(-[WKContentView _didCompleteSyntheticClick]):
(-[WKContentView _singleTapRecognized:]):

LayoutTests:

Reviewed by Dean Jackson.

Add a new test that checks that calling preventDefault() within a "pointerdown" event handler correctly prevents
the dispatch of compatibility mouse events even with a slow tap.

* pointerevents/ios/pointer-events-no-mousedown-when-prevent-default-called-on-pointerdown-expected.txt: Added.
* pointerevents/ios/pointer-events-no-mousedown-when-prevent-default-called-on-pointerdown.html: Added.

Canonical link: https://commits.webkit.org/213079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246693 268f45cc-cd09-0410-ab3c-d52691b4dbfc